# TEAM1-Car_control_i2c

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  a.out  main.cpp
STM32/test2_can/: .cproject  .mxproject  .project  test2_can Debug.launch  test2_can.ioc
STM32/test2_can/Core/Src/: main.c
STM32/test2_can/Debug/: makefile  test2_can.elf  test2_can.list  test2_can.map
STM32/test2_can/Debug/Core/Src/: main.cyclo  main.su
include/: exceptions.hpp  sdl.h
lib/: .gitignore  sdl.h
lib/TEAM1_I2C/include/: I2c_PcA9685.hpp
lib/srcs/: I2c_INA219.cpp  I2c_PcA9685.cpp
libs/TEAM1_I2C/include/: I2c_PcA9685.hpp
srcs/: init.cpp  initCar.cpp  init_exit_car.cpp  main.cpp
srcs/exit/: exitCleanups.cpp  signals.cpp
srcs/init/: init_car_i2c.cpp  init_gpio.cpp
srcs/sensors/: speedSensor.cpp
srcs/utils/: exitCleanups.cpp  math_utils.cpp
